--- a/views/front.haml
+++ b/views/front.haml
@@ -2,17 +2,7 @@
 %html
   %head
     %title /ascii/
-    :css                       
-      body{font-family: sans-serif; width: 800px; margin: 0 auto; padding: 10px;}
-      .error{color: red;}
-      label{display: block; font-size: 20px;}
-      input[type=text]{width: 400px; font-size: 20px; padding: 2px;}
-      textarea{width: 400px; height: 200px; font-size: 17px; font-family: monospace}
-      input[type=submit]{font-size: 24px;}
-      hr{margin: 20px auto;}
-      .art + .art{margin-top: 20px;}
-      .art-title{font-weight: bold; font-size: 20px;}
-      .art-body{margin: 0; font-size: 17px;} 
+    %link{:rel => "stylesheet", :type => "text/css", :href => "/css/styles.css"}
 
   %body
     %h1 /ascii/
@@ -36,10 +26,10 @@
     %hr
     %div.art Art Gallery
     %hr
-    - locals[:art_gallery].each do |title, artwork|
+    - locals[:art_gallery].each do |a|
       .art-title
-        #{title}
+        #{a.title}
       %pre.art-body
         :preserve
-          #{artwork}
+          #{a.work_of_art}
 
